--- a/index.html
+++ b/index.html
@@ -324,6 +324,12 @@
     </footer>
     <!-- Footer  Finish -->
 
+    <!-- Whatsapp Start-->
+    <a href="https://api.whatsapp.com/send?phone=5070246857&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." class="whatsap-icon" target="_blank">
+      <i class='bx bxl-whatsapp wp-float'></i>
+      </a>
+    <!-- Whatsap Finish -->
+
     <!--Scrollreveal js-->
     <script src="https://unpkg.com/scrollreveal"></script>
     <!--Custom js-->
