--- a/services.html
+++ b/services.html
@@ -29,13 +29,13 @@
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="/index.html" class="nav__link active-link">Home</a>
+              <a href="/index.html" class="nav__link">Home</a>
             </li>           
             <li class="nav__item">
               <a href="/about.html" class="nav__link">About Us</a>
             </li>
             <li class="nav__item">
-              <a href="/services.html" class="nav__link">Services</a>
+              <a href="/services.html" class="nav__link active-link">Services</a>
             </li>
             <li class="nav__item">
               <a href="/contact.html" class="nav__link">Contact Us</a>
@@ -65,62 +65,8 @@
 
     <!-- Main Start -->
     <main class="main">
-     
-      <!-- Hero Start -->
-      <section class="hero section" id="home">
-        <div class="hero__container container grid">
-          <div class="hero__data">
-            <h1 class="hero__title">
-              Consultancy <br />
-              International
-            </h1>
-            <p class="hero__description">
-              Expert service of distinct quality and excellence!
-            </p>
-            <a href="#" class="button">Contact Us</a>
-          </div>
-          <img
-            src="https://image.freepik.com/free-vector/business-team-working-project-project-management-business-analysis-planning-brainstorming-research-consulting-motivation-concept-vector-isolated-illustration_335657-2244.jpg"
-            class="hero__img"
-            alt="hero-img"
-          />
-        </div>
-      </section>
-      <!-- Hero Finish -->
-
-      <!-- About Us Start -->
-      <div class="bg-color-about">     
-      <section class="about section container" id="about">
-        <div class="about__container grid">
-          <div class="about__data ani-left">
-            <h2 class="section__title-center">
-              Who Are We? <br />
-              About Us <br />
-              _
-            </h2>
-            <p class="about__description ">
-              The Turan Group provides international consultancy and mediation
-              services in foreign trade especially, but also in the fields of
-              real estate investment, petrochemistry, education, and healthcare
-              services. Our A Plus & Turan Group headquarters and country
-              coordinators offer our business partners the fastest and most
-              effective solutions at low operational costs in all the countries
-              where we operate.
-            </p>
-            <a href="#" class="button button-detail">Details</a>
-          </div>
-          <img
-            src="https://image.freepik.com/free-vector/business-team-brainstorm-idea-lightbulb-from-jigsaw-working-team-collaboration-enterprise-cooperation-colleagues-mutual-assistance-concept-pinkish-coral-bluevector-isolated-illustration_335657-1651.jpg"
-            class="about__img ani-right"
-            alt="about-us"
-          />
-        </div>
-      </section>
-    </div>
-      <!-- About Us Finish -->
-
       <!-- Services Us Start -->
-      <section class="services section container" id="services">
+      <section class="services section container" id="services" style="padding:6rem 0 1rem;">
         <h2 class="section__title">Services <br />_</h2>
         <div class="services__container grid ani-fade-up">
           <div class="services__data">
@@ -221,65 +167,6 @@
         </div>
       </section>
       <!-- Services Us Finish -->
-
-      <!-- Contact Start -->
-      <div class="bg-color-contact">
-      <section class="contact section container" id="contact">
-        <div class="contact__container grid">
-          <div class="contact__content ani-left">
-            <h2 class="section__title-center">
-              Contact Us From <br />
-              Here <br />
-              _
-            </h2>
-            <p class="contact__description">
-              You can contact us from here, you can write to us, call us or
-              visit our service center, we will gladly assist you.
-            </p>
-
-            <ul class="section grid">
-              <li class="contact__address">
-                <i class="bx bx-phone-incoming"></i>
-                Telephone:
-                <span class="contact__information">+90 212 621 79 33</span>
-              </li>
-              <li class="contact__address">
-                <i class="bx bx-mail-send"></i>
-                <a href="mailto:info@trbangla.com" class="contact__address">
-                  E-mail:
-                  <span class="contact__information">info@trbangla.com</span>
-                </a>
-              </li>
-              <li class="contact__address">
-                <i class="bx bx-location-plus"></i>
-                Location:
-                <span class="contact__information"
-                  >Güneşli Rezidans Numara:1 Kat:13 Daire:73 Bağcılar /
-                  İstanbul</span
-                >
-              </li>
-              <li class="contact__addres">
-                <a href="#" class="button">Contact Us</a>
-              </li>
-            </ul>
-          </div>
-       
-          <div class="contact__content ani-right">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12040.786501477118!2d28.8240337!3d41.020954!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x899142a9a8f7cfaf!2sGinza%20G%C3%BCne%C5%9Fli%20Aile%20Rezidans!5e0!3m2!1str!2str!4v1595483925498!5m2!1str!2str"
-              width="100%"
-              height="504"
-              frameborder="0"
-              style="border: 0"
-              allowfullscreen=""
-              aria-hidden="false"
-              tabindex="0"
-            ></iframe>
-          </div>
-        </div>
-      </section>
-    </div>
-      <!-- Contact Finish -->
     </main>
     <!-- Main Finish -->
 
