--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="TURKEY Bangladesh" />
-    <meta name="description" content="TURKEY Bangladesh" />
-    <title>TR BANGLA</title>
+    <meta name="keywords" content="turkey, bangladesh, international, consultancy, mediation, services" />
+    <meta name="description" content="The  TR Bangla provides international consultancy and mediation services in foreign trade especially, but also in the fields of real estate investment, petrochemistry, education, and healthcare services. " />
+    <meta name="Author" content="Nimetullah, info@trbangla.com"> 
+    <title>TR BANGLA-Contact</title>
     <!-- Fav Icon -->
     <link
       rel="icon"
