--- a/education.html
+++ b/education.html
@@ -13,20 +13,16 @@
       content="The  TR Bangla provides international consultancy and mediation services in foreign trade especially, but also in the fields of real estate investment, petrochemistry, education, and healthcare services. "
     />
     <meta name="Author" content="Nimetullah, info@trbangla.com" />
-    <title>TR BANGLA-About</title>
+    <title>TR BANGLA-Education</title>
     <!-- Fav Icon -->
-    <link
-      rel="icon"
-      href="/assets/img/logo-trbangla.png"
-      type="image/x-icon"
-    />
+    <link rel="icon" href="/assets/img/logo-trbangla.png" type="image/x-icon" />
     <!-- Box Icons -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
     />
     <!-- Custom Css -->
-    <link rel="stylesheet" href="/assets/css/style.css" />  
+    <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
   <body>
     <!-- Header Start -->
@@ -46,7 +42,7 @@
             <li class="nav__item en">
               <a href="/about.html" class="nav__link">About Us</a>
             </li>
-  
+           
             <li class="nav__item dropdown">
               <div class=" dropdown__link">
                   <a href="#" class="nav__link">Services  </a>
@@ -99,40 +95,41 @@
           <div class="about__container grid">
             <div class="about__data ani-left">
               <h2 class="section__title-center">
-                Who Are We? <br />
-                About Us <br />
+                EDUCATİON<br />
                 _
               </h2>
-              <p class="about__description">
-                Neamat Ullah, who has been a professional since 2012 is
-                entrepreneurial and performance-driven executive, with a broad
-                ranging experience in all aspects of managing sales, marketing,
-                business development and field operations at International Trade
-                and NGO affairs. Neamat Ullah has studied in Bangladesh, Turkey
-                and Malaysia. He established his own NGO & company (MARSA and TR
-                Bangla) He has been carrying on his business successfully.
+              <p class="about__description" >
+                TR Bangla Study Abroad is an educational agency that guides and
+                consults students all around the globe, to attend colleges and
+                universities all around the world. With loads of available
+                resources and an extensive network of connections, we guide you
+                through the process by providing valuable information, to make
+                sure that you make to your dream course in your college,
+                seamlessly. We have always been committed to making sure that
+                students that get in touch with us, receive the best value for
+                what they have paid. At TR Bangla Study Abroad, it’s not merely
+                about consulting and providing you with some guides and tons of
+                information resources. We believe in delivering a service that
+                crafts you a straightforward, customized and a detailed action
+                plan to make it through. From applying to visa to applying to
+                the colleges and finally adjusting in the country you looking to
+                study in, we remain by your side and make you walk through the
+                process, effortlessly. We understand the pressures that an
+                international student has to go through the jittery process of
+                applying to the best universities in Turkey and finally making
+                it to them and therefore, we leave no stone unturned to help you
+                realize your dreams. We put ourselves in your shoes and leverage
+                you with unlimited support. Our experience, connections,
+                knowledge and resources let you achieve your dreams.
               </p>
-              <br />
-
-              Our company works with the “most” leading, “most” qualified and
-              “most” professional factories of the industry in Turkey and it
-              provides service in terms of exporting products to overseas
-              markets. Our founding purpose is to spread Turkish labor, Turkish
-              power, Turkish services and genuine Turkish quality to the world
-              and give it the place it deserves in the world market.
-
-              <br />
-
-              The factories we work with have the certification for CE, ISO
-              9001,ISO 14001 and ISO18001 and meet the required standards for
-              countries. You can be sure that we will have you enjoy the
-              combination of real quality with real competitive conditions.
             </div>
-            <img
-              src="https://image.freepik.com/free-vector/business-team-brainstorm-idea-lightbulb-from-jigsaw-working-team-collaboration-enterprise-cooperation-colleagues-mutual-assistance-concept-pinkish-coral-bluevector-isolated-illustration_335657-1651.jpg"
-              class="about__img ani-right"
-              alt="about-us"
-            />
+            <div style="margin-top: 7rem;">
+              <img
+                src="https://cdn.pixabay.com/photo/2017/07/15/22/07/library-2507902_960_720.jpg"
+                class="about__img ani-right"
+                alt="real-estate"
+              />
+            </div>
           </div>
         </section>
       </div>
