--- a/tourism.html
+++ b/tourism.html
@@ -13,20 +13,16 @@
       content="The  TR Bangla provides international consultancy and mediation services in foreign trade especially, but also in the fields of real estate investment, petrochemistry, education, and healthcare services. "
     />
     <meta name="Author" content="Nimetullah, info@trbangla.com" />
-    <title>TR BANGLA-About</title>
+    <title>TR BANGLA-Tourism</title>
     <!-- Fav Icon -->
-    <link
-      rel="icon"
-      href="/assets/img/logo-trbangla.png"
-      type="image/x-icon"
-    />
+    <link rel="icon" href="/assets/img/logo-trbangla.png" type="image/x-icon" />
     <!-- Box Icons -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
     />
     <!-- Custom Css -->
-    <link rel="stylesheet" href="/assets/css/style.css" />  
+    <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
   <body>
     <!-- Header Start -->
@@ -46,7 +42,7 @@
             <li class="nav__item en">
               <a href="/about.html" class="nav__link">About Us</a>
             </li>
-  
+          
             <li class="nav__item dropdown">
               <div class=" dropdown__link">
                   <a href="#" class="nav__link">Services  </a>
@@ -99,40 +95,96 @@
           <div class="about__container grid">
             <div class="about__data ani-left">
               <h2 class="section__title-center">
-                Who Are We? <br />
-                About Us <br />
+                TOURİSM<br />
                 _
               </h2>
               <p class="about__description">
-                Neamat Ullah, who has been a professional since 2012 is
-                entrepreneurial and performance-driven executive, with a broad
-                ranging experience in all aspects of managing sales, marketing,
-                business development and field operations at International Trade
-                and NGO affairs. Neamat Ullah has studied in Bangladesh, Turkey
-                and Malaysia. He established his own NGO & company (MARSA and TR
-                Bangla) He has been carrying on his business successfully.
+                We're called Best Travel company for a reason. It's because
+                we're constantly looking for ways to make your holiday as
+                perfect as possible, from the way we plan the trip to the
+                authentic experiences you'll enjoy while away. Those added
+                touches include several that no other Turkey-based travel
+                company offers.
               </p>
-              <br />
-
-              Our company works with the “most” leading, “most” qualified and
-              “most” professional factories of the industry in Turkey and it
-              provides service in terms of exporting products to overseas
-              markets. Our founding purpose is to spread Turkish labor, Turkish
-              power, Turkish services and genuine Turkish quality to the world
-              and give it the place it deserves in the world market.
 
               <br />
+              <br />
+              <h2 class="section__title-center title-rc">
+                Efficient and friendly service <br />
+                _
+              </h2>
 
-              The factories we work with have the certification for CE, ISO
-              9001,ISO 14001 and ISO18001 and meet the required standards for
-              countries. You can be sure that we will have you enjoy the
-              combination of real quality with real competitive conditions.
+              Our expert team takes pride in their thoughtful approach to
+              planning your holiday. We find out what you think might make it
+              extra special, most convenient hotel & package selections then
+              sprinkle in our own special little touches (even a surprise to
+              enjoy while you're away) to help create your dream holiday.
+
+              <br />
+              <br />
+              <h2 class="section__title-center title-rc">
+                Flexible and hassle free <br />
+                _
+              </h2>
+
+              We're here to take the stress out of the holiday planning process.
+              You can be as involved as you want, and you are always in control.
+              Everything is tailored to your exact needs and tastes, and we will
+              keep tweaking and adapting until it feels just right.
+              <br />
+              <br />
+              <h2 class="section__title-center title-rc">
+                Passionate, honest experts<br />
+                _
+              </h2>
+
+              After a decade in business and a lifetime of living and travelling
+              in our destinations, we have developed a deep knowledge and formed
+              relationships with the most impressive experts in their fields. We
+              pride ourselves on being able to ask the right questions so that
+              you can trust we get exactly what you're after.
+              <br />
+              <br />
+              <h2 class="section__title-center title-rc">
+                Time and Value <br />
+                _
+              </h2>
+
+              We all want value for money. By negotiating contracted rates with
+              the hotels, expert guides, activity providers and airlines we work
+              with, we can keep our prices as competitive as possible. One thing
+              we can offer that is truly priceless though is time - while we do
+              all the heavy lifting, you can sit back safe in the knowledge that
+              we will plan your perfect trip down to the smallest detail.
+              <br />
+              <br />
+              <h2 class="section__title-center title-rc">
+                Trust <br />
+                _
+              </h2>
+
+              It's all about trust - your holiday time is so precious that you
+              need to feel 100% comfortable that TR BANGLA Travel will guarantee
+              customers the most amazing experiences. Place your trust on us
+              completely.
             </div>
-            <img
-              src="https://image.freepik.com/free-vector/business-team-brainstorm-idea-lightbulb-from-jigsaw-working-team-collaboration-enterprise-cooperation-colleagues-mutual-assistance-concept-pinkish-coral-bluevector-isolated-illustration_335657-1651.jpg"
+            <div>
+              <img
+                src="https://www.atomrentacar.com/tema/rentacar/uploads/sayfalar/Cappadocia_Kapadokya_araba_Kiralama.jpg"
+                class="about__img ani-right"
+                alt="real-estate"
+              />
+              <img
+                src="https://images.unsplash.com/photo-1579554370034-9aa1275e9c7b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1935&q=80"
+                class="about__img ani-right"
+                alt="real-estate"
+              />
+              <img
+              src="https://images.unsplash.com/photo-1596093331002-1cd47abe37de?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1074&q=80"
               class="about__img ani-right"
-              alt="about-us"
+              alt="real-estate"
             />
+            </div>
           </div>
         </section>
       </div>
