--- a/trading.html
+++ b/trading.html
@@ -13,20 +13,16 @@
       content="The  TR Bangla provides international consultancy and mediation services in foreign trade especially, but also in the fields of real estate investment, petrochemistry, education, and healthcare services. "
     />
     <meta name="Author" content="Nimetullah, info@trbangla.com" />
-    <title>TR BANGLA-About</title>
+    <title>TR BANGLA-Trading</title>
     <!-- Fav Icon -->
-    <link
-      rel="icon"
-      href="/assets/img/logo-trbangla.png"
-      type="image/x-icon"
-    />
+    <link rel="icon" href="/assets/img/logo-trbangla.png" type="image/x-icon" />
     <!-- Box Icons -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
     />
     <!-- Custom Css -->
-    <link rel="stylesheet" href="/assets/css/style.css" />  
+    <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
   <body>
     <!-- Header Start -->
@@ -46,7 +42,7 @@
             <li class="nav__item en">
               <a href="/about.html" class="nav__link">About Us</a>
             </li>
-  
+           
             <li class="nav__item dropdown">
               <div class=" dropdown__link">
                   <a href="#" class="nav__link">Services  </a>
@@ -99,40 +95,45 @@
           <div class="about__container grid">
             <div class="about__data ani-left">
               <h2 class="section__title-center">
-                Who Are We? <br />
-                About Us <br />
+                TRADİNG<br />
                 _
               </h2>
               <p class="about__description">
-                Neamat Ullah, who has been a professional since 2012 is
-                entrepreneurial and performance-driven executive, with a broad
-                ranging experience in all aspects of managing sales, marketing,
-                business development and field operations at International Trade
-                and NGO affairs. Neamat Ullah has studied in Bangladesh, Turkey
-                and Malaysia. He established his own NGO & company (MARSA and TR
-                Bangla) He has been carrying on his business successfully.
+                <strong>Textile-</strong>
+                <br />
+                We, TR Bangla Group, have been well performing as a leading
+                textile supplier of Bangşadesh with specialization in cotton,
+                viscose, cotton spandex. To fulfill market requirements for
+                quality, speed, design, we provide customers with best solution
+                by use of our advanced know-how for designing and development in
+                global network. Based on our performance in textile as well as
+                garments and retail till today, we keep our best efforts to make
+                our customers satisfied by creating additional value and service
+                in global market. We shall be very obliged for your kind
+                cooperation and support to us same as extended till today.
+                <br />
+                <br />
+                <strong>Chemical-</strong>
+                <br />
+                TR BANGLA Chem specializes in the distribution of both liquid
+                and solid chemicals to the textile industries using these
+                chemicals as raw materials in their production. The company has
+                specialized know-hows across Turkey from which it can service
+                its customers quickly and efficiently.
               </p>
-              <br />
-
-              Our company works with the “most” leading, “most” qualified and
-              “most” professional factories of the industry in Turkey and it
-              provides service in terms of exporting products to overseas
-              markets. Our founding purpose is to spread Turkish labor, Turkish
-              power, Turkish services and genuine Turkish quality to the world
-              and give it the place it deserves in the world market.
-
-              <br />
-
-              The factories we work with have the certification for CE, ISO
-              9001,ISO 14001 and ISO18001 and meet the required standards for
-              countries. You can be sure that we will have you enjoy the
-              combination of real quality with real competitive conditions.
             </div>
-            <img
-              src="https://image.freepik.com/free-vector/business-team-brainstorm-idea-lightbulb-from-jigsaw-working-team-collaboration-enterprise-cooperation-colleagues-mutual-assistance-concept-pinkish-coral-bluevector-isolated-illustration_335657-1651.jpg"
+            <div>
+              <img
+                src="https://images.unsplash.com/photo-1476683874822-744764a2438f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80"
+                class="about__img ani-right"
+                alt="real-estate"
+              />
+              <img
+              src="https://images.unsplash.com/photo-1598207548924-fcab47e9b272?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1074&q=80"
               class="about__img ani-right"
-              alt="about-us"
+              alt="real-estate"
             />
+            </div>
           </div>
         </section>
       </div>
