--- a/agro-business.html
+++ b/agro-business.html
@@ -142,14 +142,14 @@
         <div class="footer__content">
           <h3 class="footer__title">Our Services</h3>
           <ul class="footer__links">
-            <li><a href="#" class="footer__link">Real Estate</a></li>
-            <li><a href="#" class="footer__link">Tourism</a></li>
-            <li><a href="#" class="footer__link">Agro Business</a></li>
+            <li><a href="/real-estate.html" class="footer__link">Real Estate</a></li>
+            <li><a href="/tourism.html" class="footer__link">Tourism</a></li>
+            <li><a href="/agro-business.html" class="footer__link">Agro Business</a></li>
             <li>
-              <a href="#" class="footer__link">Engineering-Machineries</a>
+              <a href="/engineering-machineries.html" class="footer__link">Engineering-Machineries</a>
             </li>
-            <li><a href="#" class="footer__link">Education</a></li>
-            <li><a href="#" class="footer__link">Trading</a></li>
+            <li><a href="/education.html" class="footer__link">Education</a></li>
+            <li><a href="/trading.html" class="footer__link">Trading</a></li>
           </ul>
         </div>
         <div class="footer__social">
