--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               Business reputation in Turkey and our experience to activate your
               access to the Turkish markets now.
             </p>
-            <a href="#" class="button">Contact Us</a>
+            <a href="/contact.html" class="button">Contact Us</a>
           </div>
           <img
             src="https://image.freepik.com/free-vector/business-team-working-project-project-management-business-analysis-planning-brainstorming-research-consulting-motivation-concept-vector-isolated-illustration_335657-2244.jpg"
@@ -181,7 +181,7 @@
               calculated what you are investing in and what you get in opposite
               of it.
             </p>
-            <a href="/services.html" class="button button-link">Learn More</a>
+            <a href="/real-estate.html" class="button button-link">Learn More</a>
           </div>
 
           <div class="services__data">
@@ -197,7 +197,7 @@
               possible, from the way we plan the trip to the authentic
               experiences you'll enjoy while away.
             </p>
-            <a href="/services.html" class="button button-link">Learn More</a>
+            <a href="/tourism.html" class="button button-link">Learn More</a>
           </div>
 
           <div class="services__data">
@@ -212,7 +212,7 @@
               all crude, refined edible oils, oilseeds, sesame seeds, grains,
               fresh fruits and feedstuffs on complete transparency basis.
             </p>
-            <a href="/services.html" class="button button-link">Learn More</a>
+            <a href="/agro-business.html" class="button button-link">Learn More</a>
           </div>
 
           <div class="services__data">
@@ -229,7 +229,7 @@
               spare parts for a variety of overseas industrial plants with our
               well-organized after-sales-service network.
             </p>
-            <a href="/services.html" class="button button-link">Learn More</a>
+            <a href="/engineering-machineries.html" class="button button-link">Learn More</a>
           </div>
 
           <div class="services__data">
@@ -246,7 +246,7 @@
               and providing you with some guides and tons of information
               resources.
             </p>
-            <a href="/services.html" class="button button-link">Learn More</a>
+            <a href="/education.html" class="button button-link">Learn More</a>
           </div>
 
           <div class="services__data">
@@ -266,7 +266,7 @@
               solid chemicals to the textile industries using these chemicals as
               raw materials in their production.
             </p>
-            <a href="/services.html" class="button button-link">Learn More</a>
+            <a href="/trading.html" class="button button-link">Learn More</a>
           </div>
         </div>
       </section>
@@ -345,14 +345,14 @@
         <div class="footer__content">
           <h3 class="footer__title">Our Services</h3>
           <ul class="footer__links">
-            <li><a href="#" class="footer__link">Real Estate</a></li>
-            <li><a href="#" class="footer__link">Tourism</a></li>
-            <li><a href="#" class="footer__link">Agro Business</a></li>
+            <li><a href="/real-estate.html" class="footer__link">Real Estate</a></li>
+            <li><a href="/tourism.html" class="footer__link">Tourism</a></li>
+            <li><a href="/agro-business.html" class="footer__link">Agro Business</a></li>
             <li>
-              <a href="#" class="footer__link">Engineering-Machineries</a>
+              <a href="/engineering-machineries.html" class="footer__link">Engineering-Machineries</a>
             </li>
-            <li><a href="#" class="footer__link">Education</a></li>
-            <li><a href="#" class="footer__link">Trading</a></li>
+            <li><a href="/education.html" class="footer__link">Education</a></li>
+            <li><a href="/trading.html" class="footer__link">Trading</a></li>
           </ul>
         </div>
         <div class="footer__social">
